# aurora

./: .gitignore  README.md  TODO.md  biome.json  index.html  package.json  typedoc.json  vite.config.ts
.github/workflows/: pull_request.yaml
src/: App.css  App.tsx  Client.tsx  ClientStore.tsx  Composer.tsx  DiffUtils.ts  EventTile.tsx  Filter.ts  Login.tsx  NotificationDecoration.tsx  RoomHeaderView.css  RoomHeaderView.tsx  RoomListFiltersView.css  RoomListFiltersView.tsx  RoomListHeaderView.css  RoomListHeaderView.tsx  RoomListItemView.css  RoomListItemView.tsx  RoomListStore.tsx  RoomListView.css  RoomListView.tsx  RoomSearchView.css  RoomSearchView.tsx  SidePanelView.css  SidePanelView.tsx  Timeline.tsx  TimelineStore.tsx  index.web.ts  main.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  wrapping-examples.txt
src-tauri/src/: main.rs
src/MemberList/: BaseAvatar.tsx  BaseCard.css  BaseCard.tsx  MemberList.css  MemberListHeaderView.tsx  MemberListStore.tsx  MemberListView.tsx  MemberListViewModel.tsx
src/MemberList/tiles/: RoomMemberTileView.tsx  ThreePidInviteTileView.tsx
src/MemberList/tiles/common/: E2EIconView.tsx  InvitedIconView.tsx  MemberTileView.css  MemberTileView.tsx  PresenceIconView.tsx
src/utils/: ButtonEvent.tsx  Flex.css  Flex.tsx  ShieldUtils.ts  UnstableValue.ts  arrays.ts  numbers.ts
